--- a/build.gradle
+++ b/build.gradle
@@ -14,3 +14,23 @@ allprojects {
     // We will be using JAVA 8, then 1.8
     sourceCompatibility = 1.8
 }
+
+allprojects {
+    repositories {
+        mavenCentral()
+        jcenter()
+        maven {
+            url "https://jitpack.io"
+        }
+    }
+}
+
+buildscript {
+    repositories {
+        mavenCentral()
+        jcenter()
+        maven {
+            url "https://jitpack.io"
+        }
+    }
+}
