--- a/build.gradle
+++ b/build.gradle
@@ -34,3 +34,9 @@ buildscript {
         }
     }
 }
+
+allprojects {
+    dependencies {
+        testCompile group: 'junit', name: 'junit', version: '4.11'
+    }
+}
