--- a/build.gradle
+++ b/build.gradle
@@ -40,3 +40,7 @@ allprojects {
         testCompile group: 'junit', name: 'junit', version: '4.11'
     }
 }
+
+configure(subprojects.findAll { it.name.startsWith("lambda-") }) {
+
+}
