--- a/build.gradle
+++ b/build.gradle
@@ -42,5 +42,7 @@ allprojects {
 }
 
 configure(subprojects.findAll { it.name.startsWith("lambda-") }) {
-
+    dependencies {
+        compile project(':lambda')
+    }
 }
