--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,10 @@ buildscript {
             url "https://jitpack.io"
         }
     }
+
+    dependencies {
+        classpath "com.github.jengelman.gradle.plugins:shadow:1.2.3"
+    }
 }
 
 allprojects {
