--- a/build.gradle
+++ b/build.gradle
@@ -70,4 +70,14 @@ configure(subprojects.findAll { it.name.startsWith("lambda-") }) {
     }
     apply plugin: "com.github.johnrengelman.shadow"
     build.finalizedBy shadowJar
+
+    def producedJarFilePath = it.tasks.shadowJar.archivePath
+    def s3Key = "artifacts/${it.name}/${it.version}/${deploymentTime}.jar"
+
+    task uploadArtifactsToS3(type: jp.classmethod.aws.gradle.s3.AmazonS3FileUploadTask,
+            dependsOn: [build, createDeploymentBucket]) {
+        bucketName deploymentBucketName
+        file producedJarFilePath
+        key s3Key
+    }
 }
