--- a/cloudformation.template
+++ b/cloudformation.template
@@ -186,6 +186,19 @@
           ]
         }
       }
+    },
+    "TestLambdaPermission": {
+      "Type": "AWS::Lambda::Permission",
+      "Properties": {
+        "Action": "lambda:InvokeFunction",
+        "FunctionName": {
+          "Ref": "TestLambda"
+        },
+        "Principal": "apigateway.amazonaws.com",
+        "SourceArn": {
+          "Fn::Sub": "arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${RestApi}/*"
+        }
+      }
     }
   }
 }
