--- a/cloudformation.template
+++ b/cloudformation.template
@@ -15,6 +15,70 @@
     }
   },
   "Resources": {
+    "DeploymentLambdaRole": {
+      "Type": "AWS::IAM::Role",
+      "Properties": {
+        "AssumeRolePolicyDocument": {
+          "Version": "2012-10-17",
+          "Statement": [
+            {
+              "Effect": "Allow",
+              "Principal": {
+                "Service": [
+                  "lambda.amazonaws.com"
+                ]
+              },
+              "Action": [
+                "sts:AssumeRole"
+              ]
+            }
+          ]
+        },
+        "Path": "/",
+        "ManagedPolicyArns": [
+          "arn:aws:iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole"
+        ],
+        "Policies": [
+          {
+            "PolicyName": "LambdaExecutionPolicy",
+            "PolicyDocument": {
+              "Version": "2012-10-17",
+              "Statement": [
+                {
+                  "Effect": "Allow",
+                  "Action": [
+                    "lambda:PublishVersion",
+                    "apigateway:POST"
+                  ],
+                  "Resource": [
+                    "*"
+                  ]
+                }
+              ]
+            }
+          }
+        ]
+      }
+    },
+    "DeploymentLambda": {
+      "Type": "AWS::Lambda::Function",
+      "Properties": {
+        "Role": {
+          "Fn::GetAtt": [
+            "DeploymentLambdaRole",
+            "Arn"
+          ]
+        },
+        "Handler": "serverless.handler",
+        "Runtime": "nodejs4.3",
+        "Code": {
+          "S3Bucket": {
+            "Fn::Sub": "serverless-arch-${AWS::Region}"
+          },
+          "S3Key": "serverless.zip"
+        }
+      }
+    },
     "ApiGatewayCloudwatchRole": {
       "Type": "AWS::IAM::Role",
       "Properties": {
