--- a/cloudformation.template
+++ b/cloudformation.template
@@ -348,6 +348,31 @@
           "Ref": "DomainName"
         }
       }
+    },
+    "DNSRecord": {
+      "Type": "AWS::Route53::RecordSetGroup",
+      "Properties": {
+        "HostedZoneId": {
+          "Ref": "Route53HostedZone"
+        },
+        "RecordSets": [
+          {
+            "Name": {
+              "Ref": "DomainName"
+            },
+            "Type": "A",
+            "AliasTarget": {
+              "HostedZoneId": "Z2FDTNDATAQYW2",
+              "DNSName": {
+                "Fn::GetAtt": [
+                  "CloudformationDistribution",
+                  "DomainName"
+                ]
+              }
+            }
+          }
+        ]
+      }
     }
   }
 }
