--- a/cloudformation.template
+++ b/cloudformation.template
@@ -373,6 +373,22 @@
           }
         ]
       }
+    },
+    "SSLCertificate": {
+      "Type": "AWS::CertificateManager::Certificate",
+      "Properties": {
+        "DomainName": {
+          "Ref": "DomainName"
+        },
+        "DomainValidationOptions": [
+          {
+            "DomainName": {
+              "Ref": "DomainName"
+            },
+            "ValidationDomain": "merkurapp.com"
+          }
+        ]
+      }
     }
   }
 }
