--- a/cloudformation.template
+++ b/cloudformation.template
@@ -136,7 +136,8 @@
               "Effect": "Allow",
               "Principal": {
                 "Service": [
-                  "lambda.amazonaws.com"
+                  "lambda.amazonaws.com",
+                  "apigateway.amazonaws.com"
                 ]
               },
               "Action": [
