--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,8 @@ allprojects {
 allprojects {
     dependencies {
         testCompile group: 'junit', name: 'junit', version: '4.11'
+        testCompile group: 'org.easymock', 'name': 'easymock', 'version': '3.4'
+        testCompile group: 'org.powermock', name: 'powermock-easymock-release-full', version: '1.6.+'
     }
 }
 
