--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,9 @@ allprojects {
 
 allprojects {
     dependencies {
+
+        compileOnly group: 'javax.inject', name: 'javax.inject', version: '1'
+
         testCompile group: 'junit', name: 'junit', version: '4.11'
         testCompile group: 'org.easymock', 'name': 'easymock', 'version': '3.4'
         testCompile group: 'org.powermock', name: 'powermock-easymock-release-full', version: '1.6.+'
