--- a/cloudformation.template
+++ b/cloudformation.template
@@ -841,6 +841,81 @@
           "Ref": "UsersIdResource"
         }
       }
+    },
+    "UsersIdPicturePutMethod": {
+      "Type": "AWS::ApiGateway::Method",
+      "Properties": {
+        "HttpMethod": "PUT",
+        "RestApiId": {
+          "Ref": "RestApi"
+        },
+        "AuthorizationType": "CUSTOM",
+        "AuthorizerId": {
+          "Ref": "ApiGatewayAuthorizer"
+        },
+        "ResourceId": {
+          "Ref": "UsersIdPictureResource"
+        },
+        "RequestParameters": {
+          "method.request.path.id": "True",
+          "method.request.header.Content-Type": "True",
+          "method.request.header.Content-Length": "True"
+        },
+        "Integration": {
+          "Type": "AWS",
+          "Uri": {
+            "Fn::Sub": "arn:aws:apigateway:${AWS::Region}:s3:path/${ProfilePicturesBucket}/uploads/{filename}"
+          },
+          "IntegrationHttpMethod": "PUT",
+          "Credentials": {
+            "Fn::GetAtt": [
+              "ApiGatewayProxyRole",
+              "Arn"
+            ]
+          },
+          "RequestParameters": {
+            "integration.request.path.filename": "context.requestId",
+            "integration.request.header.Content-Type": "method.request.header.Content-Type",
+            "integration.request.header.Content-Length": "method.request.header.Content-Length",
+            "integration.request.header.Expect": "'100-continue'",
+            "integration.request.header.x-amz-acl": "'public-read'",
+            "integration.request.header.x-amz-meta-user-id": "method.request.path.id"
+          },
+          "RequestTemplates": {
+          },
+          "PassthroughBehavior": "WHEN_NO_TEMPLATES",
+          "IntegrationResponses": [
+            {
+              "SelectionPattern": "4\\d{2}",
+              "StatusCode": "400"
+            },
+            {
+              "SelectionPattern": "5\\d{2}",
+              "StatusCode": "500"
+            },
+            {
+              "SelectionPattern": ".*",
+              "StatusCode": "202",
+              "ResponseTemplates": {
+                "application/json": {
+                  "Fn::Sub": "{\"status\": \"pending\"}"
+                }
+              }
+            }
+          ]
+        },
+        "MethodResponses": [
+          {
+            "StatusCode": "202"
+          },
+          {
+            "StatusCode": "400"
+          },
+          {
+            "StatusCode": "500"
+          }
+        ]
+      }
     }
   }
 }
