--- a/lambda-userregistration/build.gradle
+++ b/lambda-userregistration/build.gradle
@@ -1,5 +1,5 @@
 dependencies {
     compile group: 'com.google.inject', name: 'guice', version: guiceVersion
     compile project(':services-user')
-
+    compile group: 'com.amazonaws', name: 'aws-java-sdk-sns', version: '1.11.+'
 }
