--- a/cloudformation.template
+++ b/cloudformation.template
@@ -980,6 +980,15 @@
               ]
             },
             "Protocol": "lambda"
+          },
+          {
+            "Endpoint": {
+              "Fn::GetAtt": [
+                "UserRegistrationQueue",
+                "Arn"
+              ]
+            },
+            "Protocol": "sqs"
           }
         ]
       }
