--- a/cloudformation.template
+++ b/cloudformation.template
@@ -1070,6 +1070,21 @@
           }
         ]
       }
+    },
+    "SearchResource": {
+      "Type": "AWS::ApiGateway::Resource",
+      "Properties": {
+        "PathPart": "search",
+        "RestApiId": {
+          "Ref": "RestApi"
+        },
+        "ParentId": {
+          "Fn::GetAtt": [
+            "RestApi",
+            "RootResourceId"
+          ]
+        }
+      }
     }
   }
 }
